test/src/e2e_vm_tests/test_programs/should_fail/supertraits_for_abis_not_implemented/src/main.sw
contract;

trait MyTrait {
    fn foo();
}

abi MyAbi : MyTrait {
    fn bar();
}

// The implementation of MyAbi for Contract must also implement MyTrait
impl MyAbi for Contract {
    fn bar() { }
}